[package]

name = "rustless"
version = "0.7.0"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
description = "Rustless is a REST-like API micro-framework for Rust."
homepage = "https://github.com/rustless/rustless"
repository = "https://crates.io/crates/rustless"
keywords = ["api", "web", "hyper", "iron", "rest"]
readme = "README.md"
license = "MIT"

[lib]
name = "rustless"
path = "src/lib.rs"

[[test]]
name = "tests"

[features]
default = ["iron_backend"]
iron_backend = ["iron", "bodyparser", "plugin"]

[dependencies]
regex = "*"
lazy_static = "*"
rustc-serialize = "*"
valico = "*"
queryst = "*"
jsonway = "*"
url = "*"
hyper = "*"
error = "*"
typemap = "*"
log = "*"
typeable = "*"
traitobject = "*"

[dependencies.cookie]
version = "0.1"
default-features = false

[dependencies.iron]
optional = true
version = "*"

[dependencies.bodyparser]
optional = true
version = "*"

[dependencies.plugin]
optional = true
version = "*"
