[package]

name = "rustless"
version = "0.7.0"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
description = "Rustless is a REST-like API micro-framework for Rust."
homepage = "http://rustless.org/"
repository = "https://github.com/rustless/rustless"
documentation = "http://rustless.org/rustless/doc/rustless/"
keywords = ["api", "web", "hyper", "iron", "rest"]
readme = "README.md"
license = "MIT"

[lib]
name = "rustless"
path = "src/lib.rs"

[[test]]
name = "tests"

[features]
default = ["iron_backend"]
iron_backend = ["iron", "bodyparser", "plugin"]

[dependencies]
regex = "0.1"
lazy_static = "0.1"
rustc-serialize = "0.3"
valico = "0.8"
hyper = "0.6"
queryst = "0.1"
jsonway = "0.3"
url = "0.2"
error = "0.1"
typemap = "0.3"
log = "0.3"
typeable = "0.1"
traitobject = "0.0"

[dependencies.cookie]
version = "0.1"
default-features = false

[dependencies.iron]
optional = true
version = "0.2"

[dependencies.bodyparser]
optional = true
version = "0.0"

[dependencies.plugin]
optional = true
version = "0.2"
